[package]
name = "phooey"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "phooey"

[dependencies]
actix-web = { version = "4.1.0", features = ["rustls"] }
actix-cors = "0.6.2"
actix-files = "0.6.2"
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }

tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }

tokio-postgres = {version = "0.7.6", features = ["with-chrono-0_4"]}

deadpool-postgres = { version = "0.10.2", features = ["serde"] }

serde = { version = "1.0.143", features = ["derive"]}
derive_more = "0.99.17"

chrono = {version = "0.4.22", features = ["serde"]}

emoji-logger = "0.1.0"

secrecy = "0.8.0"

#bb8 = "0.8.0"
#bb8-postgres = "0.8.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html